@@ -2,6 +2,7 @@ libstream-more-perl (0.7.8) UNRELEASED; urgency=low
 
   * Stream::Propagate:
    - load formats from catalog
+   - compress content if gzip option is set
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 17 Feb 2012 17:22:43 +0400
 
